--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+
     <script
       src="https://kit.fontawesome.com/54e65c0292.js"
       crossorigin="anonymous"
@@ -29,7 +31,38 @@
     ></script>
   </head>
   <body>
-    <h1 class="bg-warning">hello hello</h1>
-    <h2>more hello's to check the font</h2>
+    <div class="hero">
+      <div class="container mt-5 mb-5 d-flex">
+        <div class="col-6">
+          <div class="mt-4">
+            <h1>Chloé Smits</h1>
+          </div>
+          <div class="locations overlap overlap-2 mt-5 me-3">
+            <ul>
+              <li></li>
+              <li>
+                <span class="primary-word">born</span> in Mechelen, Belgium
+              </li>
+              <li>
+                <span class="primary-word">based</span> in Sydney, Australia
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="timeline col-6 mt-4">
+          <ul>
+            <li><span class="primary-word">former</span> Media Producer</li>
+            <li>
+              <span class="primary-word">current</span> QA Software tester
+            </li>
+            <li>
+              <span class="primary-word">future</span> Front End Developer
+            </li>
+            <li><span class="primary-word">lifelong</span> Dog Lover</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="index"></div>
   </body>
 </html>
