--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600&family=Roboto:wght@100;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
@@ -31,8 +33,8 @@
     ></script>
   </head>
   <body>
-    <div class="hero">
-      <div class="container mt-5 mb-5 d-flex">
+    <div class="hero d-flex">
+      <div class="container d-flex">
         <div class="col-6">
           <div class="mt-4">
             <h1>Chloé Smits</h1>
@@ -49,7 +51,7 @@
             </ul>
           </div>
         </div>
-        <div class="timeline col-6 mt-4">
+        <div class="timeline col-6 mt-4 mb-5">
           <ul>
             <li><span class="primary-word">former</span> Media Producer</li>
             <li>
