final touches on hero part of homepage

--- a/index.html
+++ b/index.html
@@ -43,24 +43,28 @@
             <ul>
               <li></li>
               <li>
-                <span class="primary-word">born</span> in Mechelen, Belgium
+                <span class="primary-word">born &nbsp</span>in MECHELEN _
+                belgium
               </li>
               <li>
-                <span class="primary-word">based</span> in Sydney, Australia
+                <span class="primary-word">based &nbsp</span>in SYDNEY _
+                australia
               </li>
             </ul>
           </div>
         </div>
         <div class="timeline col-6 mt-4 mb-5">
           <ul>
-            <li><span class="primary-word">former</span> Media Producer</li>
             <li>
-              <span class="primary-word">current</span> QA Software tester
+              <span class="primary-word">FORMER &nbsp</span> media producer
             </li>
             <li>
-              <span class="primary-word">future</span> Front End Developer
+              <span class="primary-word">CURRENT &nbsp</span> qa software tester
             </li>
-            <li><span class="primary-word">lifelong</span> Dog Lover</li>
+            <li>
+              <span class="primary-word">FUTURE &nbsp</span> front end developer
+            </li>
+            <li><span class="primary-word">LIFELONG &nbsp</span> dog lover</li>
           </ul>
         </div>
       </div>
