--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <body>
     <div class="hero d-flex">
       <div class="container d-flex">
-        <div class="col-6">
+        <div class="coordinates col-6">
           <div class="mt-4">
             <h1>Chloé Smits</h1>
           </div>
-          <div class="locations overlap overlap-2 mt-5 me-3">
+          <div class="locations mt-5 me-3">
             <ul>
               <li></li>
               <li>
@@ -52,8 +52,17 @@
               </li>
             </ul>
           </div>
+          <div class="d-grid mt-4 me-3">
+            <a
+              href="mailto:chloe.smits@gmail.com"
+              target="_blank"
+              class="hero-button btn"
+              role="button"
+              >contact</a
+            >
+          </div>
         </div>
-        <div class="timeline col-6 mt-4 mb-5">
+        <div class="timeline col-6 mt-4">
           <ul>
             <li>
               <span class="primary-word">FORMER &nbsp</span> media producer
