cleaned up flex displays on hero section

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <body>
     <div class="hero d-flex">
       <div class="container d-flex">
-        <div class="coordinates col-6">
-          <div class="mt-4">
+        <div class="coordinates mt-4 me-3 d-flex col-6">
+          <div>
             <h1>Chloé Smits</h1>
           </div>
-          <div class="locations mt-5 me-3">
+          <div class="locations">
             <ul>
               <li></li>
               <li>
@@ -52,11 +52,11 @@
               </li>
             </ul>
           </div>
-          <div class="d-grid mt-4 me-3">
+          <div>
             <a
               href="mailto:chloe.smits@gmail.com"
               target="_blank"
-              class="hero-button btn"
+              class="hero-button btn d-flex"
               role="button"
               >contact</a
             >
