finished hero section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="hero d-flex">
       <div class="container d-flex">
-        <div class="coordinates mt-4 me-3 d-flex col-6">
+        <div class="coordinates col-6 mt-4 me-2 d-flex">
           <div>
             <h1>Chloé Smits</h1>
           </div>
@@ -62,7 +62,7 @@
             >
           </div>
         </div>
-        <div class="timeline col-6 mt-4">
+        <div class="timeline col-6 mt-4 ms-2">
           <ul>
             <li>
               <span class="primary-word">FORMER &nbsp</span> media producer
