making hero section responsive

--- a/index.html
+++ b/index.html
@@ -34,47 +34,54 @@
   </head>
   <body>
     <div class="hero d-flex">
-      <div class="container d-flex">
-        <div class="coordinates col-6 mt-4 me-2 d-flex">
-          <div>
-            <h1>Chloé Smits</h1>
+      <div class="container">
+        <div class="row d-block d-md-flex">
+          <div class="coordinates col-md-6 mt-4 me-md-2 d-block d-md-flex">
+            <div class="mb-5 mb-md-0">
+              <h1>Chloé Smits</h1>
+            </div>
+
+            <div class="locations">
+              <ul>
+                <li></li>
+                <li>
+                  <span class="primary-word">born &nbsp</span>in MECHELEN _
+                  belgium
+                </li>
+                <li>
+                  <span class="primary-word">based &nbsp</span>in SYDNEY _
+                  australia
+                </li>
+              </ul>
+            </div>
+            <div>
+              <a
+                href="mailto:chloe.smits@gmail.com"
+                target="_blank"
+                class="hero-button btn d-block d-md-flex mt-4 mt-md-0"
+                role="button"
+                >contact</a
+              >
+            </div>
           </div>
-          <div class="locations">
+          <div class="timeline col-md-6 mt-4 ms-md-2 d-block d-md-flex">
             <ul>
-              <li></li>
               <li>
-                <span class="primary-word">born &nbsp</span>in MECHELEN _
-                belgium
+                <span class="primary-word">FORMER &nbsp</span> media producer
               </li>
               <li>
-                <span class="primary-word">based &nbsp</span>in SYDNEY _
-                australia
+                <span class="primary-word">CURRENT &nbsp</span> qa software
+                tester
+              </li>
+              <li>
+                <span class="primary-word">FUTURE &nbsp</span> front end
+                developer
+              </li>
+              <li>
+                <span class="primary-word">LIFELONG &nbsp</span> dog lover
               </li>
             </ul>
           </div>
-          <div>
-            <a
-              href="mailto:chloe.smits@gmail.com"
-              target="_blank"
-              class="hero-button btn d-flex"
-              role="button"
-              >contact</a
-            >
-          </div>
-        </div>
-        <div class="timeline col-6 mt-4 ms-2">
-          <ul>
-            <li>
-              <span class="primary-word">FORMER &nbsp</span> media producer
-            </li>
-            <li>
-              <span class="primary-word">CURRENT &nbsp</span> qa software tester
-            </li>
-            <li>
-              <span class="primary-word">FUTURE &nbsp</span> front end developer
-            </li>
-            <li><span class="primary-word">LIFELONG &nbsp</span> dog lover</li>
-          </ul>
         </div>
       </div>
     </div>
