added first projects row

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="hero d-flex">
-      <div class="container">
+      <div class="container personal-info">
         <div class="row d-block d-md-flex">
           <div class="coordinates col-md-6 mt-4 me-md-2 d-block d-md-flex">
             <div class="mb-5 mb-md-0">
@@ -85,6 +85,26 @@
         </div>
       </div>
     </div>
-    <div class="index"></div>
+    <div class="container d-flex">
+      <div class="row projects">
+        <div class="col project-images me-md-2">
+          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
+        </div>
+        <div class="col ms-md-2 mt-5">
+          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+          <p>
+            Currently learning how to code bla bla bla nog wat meer tekst hier
+            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
+            wat ik nog wil doen
+          </p>
+          <a
+            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            target="_blank"
+            class="btn learn-more-button"
+            >Learn more</a
+          >
+        </div>
+      </div>
+    </div>
   </body>
 </html>
