made first projects row responsive

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <div class="container d-flex">
       <div class="row projects">
-        <div class="col project-images me-md-2">
+        <div class="col project-images me-md-2 d-none d-md-flex">
           <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
         </div>
         <div class="col ms-md-2 mt-5">
