--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         </div>
       </div>
     </div>
-    <div class="container d-flex">
-      <div class="row projects">
+    <div class="container">
+      <div class="row projects d-flex">
         <div class="col project-images me-md-2 d-none d-md-flex">
           <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
         </div>
-        <div class="col ms-md-2 mt-5">
+        <div class="col ms-md-2 mt-4">
           <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
           <p>
             Currently learning how to code bla bla bla nog wat meer tekst hier
@@ -103,6 +103,63 @@
             class="btn learn-more-button"
             >Learn more</a
           >
+        </div>
+      </div>
+      <div class="row projects d-flex">
+        <div class="col ms-md-2 mt-4">
+          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+          <p>
+            Currently learning how to code bla bla bla nog wat meer tekst hier
+            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
+            wat ik nog wil doen
+          </p>
+          <a
+            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            target="_blank"
+            class="btn learn-more-button"
+            >Learn more</a
+          >
+        </div>
+        <div class="col project-images me-md-2 d-none d-md-flex">
+          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
+        </div>
+      </div>
+      <div class="row projects d-flex">
+        <div class="col project-images me-md-2 d-none d-md-flex">
+          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
+        </div>
+        <div class="col ms-md-2 mt-4">
+          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+          <p>
+            Currently learning how to code bla bla bla nog wat meer tekst hier
+            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
+            wat ik nog wil doen
+          </p>
+          <a
+            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            target="_blank"
+            class="btn learn-more-button"
+            >Learn more</a
+          >
+        </div>
+      </div>
+      <div class="row projects d-flex">
+        <div class="col ms-md-2 mt-4">
+          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+          <p>
+            Currently learning how to code bla bla bla nog wat meer tekst hier
+            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
+            wat ik nog wil doen
+          </p>
+          <a
+            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            target="_blank"
+            class="btn learn-more-button"
+            >Learn more</a
+          >
+        </div>
+        <div class="col project-images me-md-2 d-none d-md-flex">
+          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
         </div>
       </div>
     </div>
