added images and links to project content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Chloé Smits</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -91,21 +91,46 @@
           <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
         </div>
         <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+          <h2><span class="primary-word">FORMER</span> Media Producer</h2>
           <p>
-            Currently learning how to code bla bla bla nog wat meer tekst hier
-            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
-            wat ik nog wil doen
+            For 15 years I've worked as a TV / Film and Live broadcast producer.
+            It's been a huge part of my life, learned a lot bjsnskvsljvslv
+            Svdzkvn skvjsv KShxiakfo Fivjlfssg
           </p>
           <a
-            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            href="/media-projects.html"
             target="_blank"
             class="btn learn-more-button"
-            >Learn more</a
+            >tell me more</a
           >
         </div>
       </div>
       <div class="row projects d-flex">
+        <div class="col ms-md-2 mt-4">
+          <h2><span class="primary-word">CURRENT</span> QA Software tester</h2>
+          <p>
+            Working at me&u, rolled into it, already doing that 1.5 years and
+            learning every day ..... sfsns o;VNSLVSl jldvnsv lSvnf Svsr s ijn
+          </p>
+          <a
+            href="https://www.meandu.com/"
+            target="_blank"
+            class="btn learn-more-button"
+            >what is me&u</a
+          >
+        </div>
+        <div class="col project-images me-md-2 d-none d-md-flex">
+          <img src="images/me&u.png" alt="my weather app" class="img-fluid" />
+        </div>
+      </div>
+      <div class="row projects d-flex">
+        <div class="col project-images me-md-2 d-none d-md-flex">
+          <img
+            src="images/SheCodes-certificate.png"
+            alt="my weather app"
+            class="img-fluid"
+          />
+        </div>
         <div class="col ms-md-2 mt-4">
           <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
           <p>
@@ -117,49 +142,26 @@
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
             class="btn learn-more-button"
-            >Learn more</a
-          >
-        </div>
-        <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
-        </div>
-      </div>
-      <div class="row projects d-flex">
-        <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
-        </div>
-        <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
-          <p>
-            Currently learning how to code bla bla bla nog wat meer tekst hier
-            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
-            wat ik nog wil doen
-          </p>
-          <a
-            href="https://www.shecodes.io/graduates/62429-chloe-smits"
-            target="_blank"
-            class="btn learn-more-button"
-            >Learn more</a
+            >learned so far</a
           >
         </div>
       </div>
       <div class="row projects d-flex">
         <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+          <h2><span class="primary-word">LIFETIME</span> Dog Lover</h2>
           <p>
-            Currently learning how to code bla bla bla nog wat meer tekst hier
-            zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
-            wat ik nog wil doen
+            always loved dogs yada yada flnkvfd ldcnv SDVN slsvj kdskjv skdes
+            jKDVs jjnde sdjdfbew
           </p>
           <a
-            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            href="https://www.youtube.com/watch?v=dJpxn7w3I7M"
             target="_blank"
             class="btn learn-more-button"
-            >Learn more</a
+            >dog days</a
           >
         </div>
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
+          <img src="images/dog.JPG" alt="my weather app" class="img-fluid" />
         </div>
       </div>
     </div>
