made homepage responsive

--- a/index.html
+++ b/index.html
@@ -90,8 +90,12 @@
         <div class="col project-images me-md-2 d-none d-md-flex">
           <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
         </div>
-        <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">FORMER</span> Media Producer</h2>
+        <div class="col ms-md-2 mt-md-4">
+          <h2><span class="primary-word d-md-none">FORMER</span></h2>
+          <h2>
+            <span class="primary-word d-none d-md-inline">FORMER</span> Media
+            Producer
+          </h2>
           <p>
             For 15 years I've worked as a TV / Film and Live broadcast producer.
             It's been a huge part of my life, learned a lot bjsnskvsljvslv
@@ -106,8 +110,12 @@
         </div>
       </div>
       <div class="row projects d-flex">
-        <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">CURRENT</span> QA Software tester</h2>
+        <div class="col ms-md-2 mt-md-4">
+          <h2><span class="primary-word d-md-none">CURRENT</span></h2>
+          <h2>
+            <span class="primary-word d-none d-md-inline">CURRENT</span> QA
+            Software tester
+          </h2>
           <p>
             Working at me&u, rolled into it, already doing that 1.5 years and
             learning every day ..... sfsns o;VNSLVSl jldvnsv lSvnf Svsr s ijn
@@ -131,8 +139,11 @@
             class="img-fluid"
           />
         </div>
-        <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">FUTURE</span> SheCodes</h2>
+        <div class="col ms-md-2 mt-md-4">
+          <h2><span class="primary-word d-md-none">FUTURE</span></h2>
+          <h2>
+            <span class="primary-word d-none d-md-inline">FUTURE</span> SheCodes
+          </h2>
           <p>
             Currently learning how to code bla bla bla nog wat meer tekst hier
             zetten over wanneer ik ben gestart en wat ik ondertussen heb behaald
@@ -147,8 +158,12 @@
         </div>
       </div>
       <div class="row projects d-flex">
-        <div class="col ms-md-2 mt-4">
-          <h2><span class="primary-word">LIFETIME</span> Dog Lover</h2>
+        <div class="col ms-md-2 mt--md4">
+          <h2><span class="primary-word d-md-none">LIFETIME</span></h2>
+          <h2>
+            <span class="primary-word d-none d-md-inline">LIFETIME</span> Dog
+            Lover
+          </h2>
           <p>
             always loved dogs yada yada flnkvfd ldcnv SDVN slsvj kdskjv skdes
             jKDVs jjnde sdjdfbew
