added scrolling links on index and optimised text color

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
               <ul>
                 <li></li>
                 <li>
-                  <span class="primary-word">born &nbsp</span>in MECHELEN _
+                  <span class="primary-word">born &nbsp</span>in MECHELEN
                   belgium
                 </li>
                 <li>
-                  <span class="primary-word">based &nbsp</span>in SYDNEY _
+                  <span class="primary-word">based &nbsp</span>in SYDNEY
                   australia
                 </li>
               </ul>
@@ -67,18 +67,20 @@
           <div class="timeline col-md-6 mt-4 ms-md-2 d-block d-md-flex">
             <ul>
               <li>
-                <span class="primary-word">FORMER &nbsp</span> media producer
+                <a href="#former" class="primary-word">FORMER &nbsp</a>
+                media producer
               </li>
               <li>
-                <span class="primary-word">CURRENT &nbsp</span> qa software
-                tester
+                <a href="#current" class="primary-word">CURRENT &nbsp</a> qa
+                software tester
               </li>
               <li>
-                <span class="primary-word">FUTURE &nbsp</span> front end
+                <a href="#future" class="primary-word">FUTURE &nbsp</a>front end
                 developer
               </li>
               <li>
-                <span class="primary-word">LIFELONG &nbsp</span> dog lover
+                <a href="#lifelong" class="primary-word">LIFELONG &nbsp</a> dog
+                lover
               </li>
             </ul>
           </div>
@@ -86,9 +88,9 @@
       </div>
     </div>
     <div class="container">
-      <div class="row projects d-flex">
+      <div class="row projects d-flex" id="former">
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/mediaA.JPG" alt="my weather app" class="img-fluid" />
+          <img src="images/mediaA.JPG" alt="camera crew" class="img-fluid" />
         </div>
         <div class="col ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">FORMER</span></h2>
@@ -109,12 +111,12 @@
           >
         </div>
       </div>
-      <div class="row projects d-flex">
+      <div class="row projects d-flex" id="current">
         <div class="col ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">CURRENT</span></h2>
           <h2>
             <span class="primary-word d-none d-md-inline">CURRENT</span> QA
-            Software tester
+            Software Tester
           </h2>
           <p>
             Working at me&u, rolled into it, already doing that 1.5 years and
@@ -131,18 +133,19 @@
           <img src="images/me&u.png" alt="my weather app" class="img-fluid" />
         </div>
       </div>
-      <div class="row projects d-flex">
+      <div class="row projects d-flex" id="future">
         <div class="col project-images me-md-2 d-none d-md-flex">
           <img
             src="images/SheCodes-certificate.png"
-            alt="my weather app"
+            alt="SheCodes certificate"
             class="img-fluid"
           />
         </div>
         <div class="col ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">FUTURE</span></h2>
           <h2>
-            <span class="primary-word d-none d-md-inline">FUTURE</span> SheCodes
+            <span class="primary-word d-none d-md-inline">FUTURE</span> Front
+            End Developer
           </h2>
           <p>
             Currently learning how to code bla bla bla nog wat meer tekst hier
@@ -157,11 +160,11 @@
           >
         </div>
       </div>
-      <div class="row projects d-flex">
+      <div class="row projects d-flex" id="lifelong">
         <div class="col ms-md-2 mt--md4">
-          <h2><span class="primary-word d-md-none">LIFETIME</span></h2>
+          <h2><span class="primary-word d-md-none">LIFELONG</span></h2>
           <h2>
-            <span class="primary-word d-none d-md-inline">LIFETIME</span> Dog
+            <span class="primary-word d-none d-md-inline">LIFELONG</span> Dog
             Lover
           </h2>
           <p>
@@ -176,7 +179,7 @@
           >
         </div>
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/dog.JPG" alt="my weather app" class="img-fluid" />
+          <img src="images/dog.JPG" alt="dog kiss" class="img-fluid" />
         </div>
       </div>
     </div>
