added links to img's on homepage
clicking the images will take you to the same content as clicking the "learn-more" buttons

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     <div class="container">
       <div class="row projects d-flex" id="former">
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/mediaA.JPG" alt="camera crew" class="img-fluid" />
+          <a href="/media-projects.html" target="_blank" class="img-btn"
+            ><img src="images/mediaA.JPG" alt="camera crew" class="img-fluid"
+          /></a>
         </div>
         <div class="col ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">FORMER</span></h2>
@@ -130,16 +132,21 @@
           >
         </div>
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/me&u.png" alt="my weather app" class="img-fluid" />
+          <a href="https://www.meandu.com/" target="_blank"
+            ><img src="images/me&u.png" alt="my weather app" class="img-fluid"
+          /></a>
         </div>
       </div>
       <div class="row projects d-flex" id="future">
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img
-            src="images/SheCodes-certificate.png"
-            alt="SheCodes certificate"
-            class="img-fluid"
-          />
+          <a
+            href="https://www.shecodes.io/graduates/62429-chloe-smits"
+            target="_blank"
+            ><img
+              src="images/SheCodes-certificate.png"
+              alt="SheCodes certificate"
+              class="img-fluid"
+          /></a>
         </div>
         <div class="col ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">FUTURE</span></h2>
@@ -179,7 +186,9 @@
           >
         </div>
         <div class="col project-images me-md-2 d-none d-md-flex">
-          <img src="images/dog.JPG" alt="dog kiss" class="img-fluid" />
+          <a href="https://www.youtube.com/watch?v=dJpxn7w3I7M" target="_blank"
+            ><img src="images/dog.JPG" alt="dog kiss" class="img-fluid"
+          /></a>
         </div>
       </div>
     </div>
