moved contact button + enhancements
enhancements:
- img fitting
- font of p

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <div class="container personal-info">
         <div class="row d-block d-md-flex">
           <div class="col-md-3 d-flex flex-column">
-            <div class="about-img mt-4 me-md-2 d-block d-md-flex">
+            <div class="about-img mt-4 mb-3 me-md-2 d-block d-md-flex">
               <img src="images/about-A.JPG" alt="" class="img-fluid" />
             </div>
             <div>
@@ -58,6 +58,10 @@
 
             <div class="about-paragraph">
               <p>
+                Hier komt dan een tekstje over mij. Over 15 jaar media
+                producties, dan verhuis naar Sydney, passie honden gevolgd, dan
+                via cutomer service in QA land gerold an zo geinteresseerd
+                geraakt in coding. Wat ik nu aan het studeren ben via SheCodes
                 Hier komt dan een tekstje over mij. Over 15 jaar media
                 producties, dan verhuis naar Sydney, passie honden gevolgd, dan
                 via cutomer service in QA land gerold an zo geinteresseerd
