added different boxshadow on about paragraph

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="coordinates col-md-9 mt-4 ms-md-2 d-block d-md-flex">
-            <div class="mb-5 mb-md-0">
+            <div class="mb-md-0">
               <h3>about me</h3>
               <h1>Chloé Smits</h1>
             </div>
@@ -66,6 +66,8 @@
                 producties, dan verhuis naar Sydney, passie honden gevolgd, dan
                 via cutomer service in QA land gerold an zo geinteresseerd
                 geraakt in coding. Wat ik nu aan het studeren ben via SheCodes
+                Over 15 jaar media producties, dan verhuis naar Sydney, passie
+                honden gevolgd, dan via cutomer service in
               </p>
             </div>
           </div>
