--- a/about.html
+++ b/about.html
@@ -37,21 +37,25 @@
       <div class="container personal-info">
         <div class="row d-block d-md-flex">
           <div class="col-md-3 d-flex flex-column">
-            <div class="about-img mt-4 mb-3 me-md-2 d-block d-md-flex">
-              <img src="images/about-A.JPG" alt="" class="img-fluid" />
+            <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
+              <img
+                src="images/about-A.JPG"
+                alt=""
+                class="img-fluid about-img"
+              />
             </div>
             <div>
               <a
                 href="mailto:chloe.smits@gmail.com"
                 target="_blank"
-                class="hero-button btn d-block d-md-flex mt-4 mt-md-0"
+                class="hero-button btn d-none d-md-flex mt-4 mt-md-0"
                 role="button"
                 >contact</a
               >
             </div>
           </div>
           <div class="coordinates col-md-9 mt-4 ms-md-2 d-block d-md-flex">
-            <div class="mb-md-0">
+            <div class="mb-4 mb-md-0">
               <h3>about me</h3>
               <h1>Chloé Smits</h1>
             </div>
@@ -69,6 +73,15 @@
                 Over 15 jaar media producties, dan verhuis naar Sydney, passie
                 honden gevolgd, dan via cutomer service in
               </p>
+            </div>
+            <div>
+              <a
+                href="mailto:chloe.smits@gmail.com"
+                target="_blank"
+                class="hero-button btn d-flex d-md-none mt-4 mt-md-0"
+                role="button"
+                >contact</a
+              >
             </div>
           </div>
         </div>
