made colors and paragraphs more generic in css

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
               <a
                 href="mailto:chloe.smits@gmail.com"
                 target="_blank"
-                class="hero-button btn d-none d-md-flex mt-4 mt-md-0"
+                class="primary-btn btn d-none d-md-flex mt-4 mt-md-0"
                 role="button"
                 >contact</a
               >
