--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a
                 href="mailto:chloe.smits@gmail.com"
                 target="_blank"
-                class="hero-button btn d-block d-md-flex mt-4 mt-md-0"
+                class="primary-btn btn d-block d-md-flex mt-4 mt-md-0"
                 role="button"
                 >contact</a
               >
@@ -89,9 +89,12 @@
     </div>
     <div class="container">
       <div class="row projects d-flex" id="former">
-        <div class="col project-images me-md-2 d-none d-md-flex">
+        <div class="col me-md-2 d-none d-md-flex">
           <a href="/media-projects.html" target="_blank" class="img-btn"
-            ><img src="images/mediaA.JPG" alt="camera crew" class="img-fluid"
+            ><img
+              src="images/mediaA.JPG"
+              alt="camera crew"
+              class="img-fluid project-image"
           /></a>
         </div>
         <div class="col ms-md-2 mt-md-4">
@@ -108,7 +111,7 @@
           <a
             href="/media-projects.html"
             target="_blank"
-            class="btn learn-more-button"
+            class="btn secondary-btn"
             >tell me more</a
           >
         </div>
@@ -127,25 +130,28 @@
           <a
             href="https://www.meandu.com/"
             target="_blank"
-            class="btn learn-more-button"
+            class="btn secondary-btn"
             >what is me&u</a
           >
         </div>
-        <div class="col project-images me-md-2 d-none d-md-flex">
+        <div class="col me-md-2 d-none d-md-flex">
           <a href="https://www.meandu.com/" target="_blank"
-            ><img src="images/me&u.png" alt="my weather app" class="img-fluid"
+            ><img
+              src="images/me&u.png"
+              alt="my weather app"
+              class="img-fluid project-image"
           /></a>
         </div>
       </div>
       <div class="row projects d-flex" id="future">
-        <div class="col project-images me-md-2 d-none d-md-flex">
+        <div class="col me-md-2 d-none d-md-flex">
           <a
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
             ><img
               src="images/SheCodes-certificate.png"
               alt="SheCodes certificate"
-              class="img-fluid"
+              class="img-fluid project-image"
           /></a>
         </div>
         <div class="col ms-md-2 mt-md-4">
@@ -162,7 +168,7 @@
           <a
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
             target="_blank"
-            class="btn learn-more-button"
+            class="btn secondary-btn"
             >learned so far</a
           >
         </div>
@@ -181,13 +187,16 @@
           <a
             href="https://www.youtube.com/watch?v=dJpxn7w3I7M"
             target="_blank"
-            class="btn learn-more-button"
+            class="btn secondary-btn"
             >dog days</a
           >
         </div>
-        <div class="col project-images me-md-2 d-none d-md-flex">
+        <div class="col me-md-2 d-none d-md-flex">
           <a href="https://www.youtube.com/watch?v=dJpxn7w3I7M" target="_blank"
-            ><img src="images/dog.JPG" alt="dog kiss" class="img-fluid"
+            ><img
+              src="images/dog.JPG"
+              alt="dog kiss"
+              class="img-fluid project-image"
           /></a>
         </div>
       </div>
