improved responsive on index page

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   </head>
   <body>
     <div class="hero d-flex">
-      <div class="container personal-info">
+      <div class="container personal-container">
         <div class="row d-block d-md-flex">
-          <div class="coordinates col-md-6 mt-4 me-md-2 d-block d-md-flex">
+          <div class="personal-content col-md-6 mt-4 me-md-2 d-block d-md-flex">
             <div class="mb-5 mb-md-0">
               <h1>Chloé Smits</h1>
             </div>
