--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="about-page">
     <div class="hero d-flex">
-      <div class="container personal-info">
+      <div class="container personal-container mt-5">
         <div class="row d-block d-md-flex">
           <div class="col-md-3 d-flex flex-column">
             <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
@@ -54,7 +54,7 @@
               >
             </div>
           </div>
-          <div class="coordinates col-md-9 mt-4 ms-md-2 d-block d-md-flex">
+          <div class="personal-content col-md-9 mt-4 ms-md-2 d-block d-md-flex">
             <div class="mb-4 mb-md-0">
               <h3>about me</h3>
               <h1>Chloé Smits</h1>
@@ -78,7 +78,7 @@
               <a
                 href="mailto:chloe.smits@gmail.com"
                 target="_blank"
-                class="hero-button btn d-flex d-md-none mt-4 mt-md-0"
+                class="primary-btn btn d-flex d-md-none mt-4 ms-5 me-5"
                 role="button"
                 >contact</a
               >
