enhanced generic names across pages

--- a/about.html
+++ b/about.html
@@ -32,11 +32,11 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="about-page">
+  <body class="about">
     <div class="hero d-flex">
       <div class="container personal-container mt-5">
         <div class="row d-block d-md-flex">
-          <div class="col-md-3 d-flex flex-column">
+          <div class="personal-wrapper col-md-3 d-flex justify-content-start">
             <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
               <img
                 src="images/about-A.JPG"
@@ -54,13 +54,13 @@
               >
             </div>
           </div>
-          <div class="personal-content col-md-9 mt-4 ms-md-2 d-block d-md-flex">
+          <div class="personal-wrapper col-md-9 mt-4 ms-md-2 d-block d-md-flex">
             <div class="mb-4 mb-md-0">
               <h3>about me</h3>
               <h1>Chloé Smits</h1>
             </div>
 
-            <div class="about-paragraph">
+            <div class="personal-summary">
               <p>
                 Hier komt dan een tekstje over mij. Over 15 jaar media
                 producties, dan verhuis naar Sydney, passie honden gevolgd, dan
