--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="homepage">
     <div class="hero d-flex">
       <div class="container personal-container">
         <div class="row d-block d-md-flex">
-          <div class="personal-content col-md-6 mt-4 me-md-2 d-block d-md-flex">
+          <div class="personal-wrapper col-md-6 mt-4 me-md-2 d-block d-md-flex">
             <div class="mb-5 mb-md-0">
               <h1>Chloé Smits</h1>
             </div>
 
-            <div class="locations">
+            <div class="personal-highlights">
               <ul>
                 <li></li>
                 <li>
@@ -64,7 +64,7 @@
               >
             </div>
           </div>
-          <div class="timeline col-md-6 mt-4 ms-md-2 d-block d-md-flex">
+          <div class="personal-summary col-md-6 mt-4 ms-md-2 d-block d-md-flex">
             <ul>
               <li>
                 <a href="#former" class="primary-word">FORMER &nbsp</a>
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row projects d-flex" id="former">
         <div class="col me-md-2 d-none d-md-flex">
-          <a href="/media-projects.html" target="_blank" class="img-btn"
+          <a href="/former.html" target="_blank" class="img-btn"
             ><img
               src="images/mediaA.JPG"
               alt="camera crew"
@@ -108,10 +108,7 @@
             It's been a huge part of my life, learned a lot bjsnskvsljvslv
             Svdzkvn skvjsv KShxiakfo Fivjlfssg
           </p>
-          <a
-            href="/media-projects.html"
-            target="_blank"
-            class="btn secondary-btn"
+          <a href="/former.html" target="_blank" class="btn secondary-btn"
             >tell me more</a
           >
         </div>
