general adjustments + building former page
adjusted class names across pages and added content on the Former page:
- img
- links
-titles

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="hero d-flex">
       <div class="container personal-container mt-5">
         <div class="row d-block d-md-flex">
-          <div class="personal-wrapper col-md-3 d-flex justify-content-start">
+          <div class="wrapper col-md-3 d-flex justify-content-start">
             <div class="mt-md-4 mb-3 me-md-2 d-block d-md-flex">
               <img
                 src="images/about-A.JPG"
@@ -54,7 +54,7 @@
               >
             </div>
           </div>
-          <div class="personal-wrapper col-md-9 mt-4 ms-md-2 d-block d-md-flex">
+          <div class="wrapper col-md-9 mt-4 ms-md-2 d-block d-md-flex">
             <div class="mb-4 mb-md-0">
               <h3>about me</h3>
               <h1>Chloé Smits</h1>
