--- a/former.html
+++ b/former.html
@@ -36,7 +36,7 @@
     <div class="hero d-flex">
       <div class="container personal-container">
         <div class="row d-block d-md-flex">
-          <div class="personal-wrapper col mt-4 d-block d-md-flex">
+          <div class="wrapper col mt-4 d-block d-md-flex">
             <div class="mb-5">
               <h1>FORMER</h1>
             </div>
@@ -54,29 +54,69 @@
     </div>
     <div class="container">
       <div class="row projects d-block d-md-flex" id="former">
-        <div class="col personal-wrapper me-md-5 d-block d-m-flex">
+        <div class="col-md-6 wrapper mb-0 me-md-5 d-block d-m-flex">
           <div>
-            <iframe
-              src="https://www.youtube.com/embed/bRDTdPXhglY"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
+            <a href="https://www.youtube.com/embed/bRDTdPXhglY" target="_blank"
+              ><img
+                src="/images/TML2.jpeg"
+                alt=""
+                class="img-fluid project-image mb-2"
+            /></a>
           </div>
           <div>
-            <h6 class="mb-0 primary-word">LIVESHOWS</h6>
-            <p>Working krkgfdlgm dgdfgl</p>
+            <h6 class="mb-0 primary-word">LIVE BROADCASTS</h6>
+            <p>e.g. Tomorrowland, Red Nose Day,..</p>
           </div>
         </div>
-        <div class="col ms-md-5 d-block d-md-flex">
-          <iframe
-            src="https://www.youtube.com/embed/bRDTdPXhglY"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+        <div class="col-md-6 wrapper me-md-5 d-block d-m-flex">
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=u0n5uri1t6Y&t=227s"
+              target="_blank"
+              ><img
+                src="/images/SYTYCD Vivian.jpg"
+                alt=""
+                class="img-fluid project-image mb-2"
+            /></a>
+          </div>
+          <div>
+            <h6 class="mb-0 primary-word">STUDIO SHOWS</h6>
+            <p>e.g. So You Think You Can Dance, Big Brother,..</p>
+          </div>
+        </div>
+      </div>
+      <div class="row projects d-block d-md-flex" id="former">
+        <div class="col-md-6 wrapper me-md-5 d-block d-m-flex">
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=eTN4wta3axM"
+              target="_blank"
+              ><img
+                src="/images/Kampioenen.jpg"
+                alt=""
+                class="img-fluid project-image mb-2"
+            /></a>
+          </div>
+          <div>
+            <h6 class="mb-0 primary-word">FICTION FILM & TV SERIES</h6>
+            <p>e.g. House of Anubis, Kampioen zijn blijft plezant,..</p>
+          </div>
+        </div>
+        <div class="col-md-6 wrapper me-md-5 d-block d-m-flex">
+          <div>
+            <a
+              href="https://www.youtube.com/watch?v=EB63IxxiboU"
+              target="_blank"
+              ><img
+                src="/images/logohlvc.jpg"
+                alt=""
+                class="img-fluid project-image mb-2"
+            /></a>
+          </div>
+          <div>
+            <h6 class="mb-0 primary-word">REALITY TV</h6>
+            <p>e.g. Impractical Jokers, The body of Coppens,..</p>
+          </div>
         </div>
       </div>
     </div>
