--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="hero d-flex">
       <div class="container personal-container">
         <div class="row d-block d-md-flex">
-          <div class="personal-wrapper col-md-6 mt-4 me-md-2 d-block d-md-flex">
+          <div class="wrapper col-md-6 mt-4 me-md-2 d-block d-md-flex">
             <div class="mb-5 mb-md-0">
               <h1>Chloé Smits</h1>
             </div>
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row projects d-flex" id="former">
+      <div class="row d-flex" id="former">
         <div class="col me-md-2 d-none d-md-flex">
           <a href="/former.html" target="_blank" class="img-btn"
             ><img
@@ -113,7 +113,7 @@
           >
         </div>
       </div>
-      <div class="row projects d-flex" id="current">
+      <div class="row d-flex" id="current">
         <div class="col ms-md-2 mt-md-4">
           <h2><span class="primary-word d-md-none">CURRENT</span></h2>
           <h2>
@@ -140,7 +140,7 @@
           /></a>
         </div>
       </div>
-      <div class="row projects d-flex" id="future">
+      <div class="row d-flex" id="future">
         <div class="col me-md-2 d-none d-md-flex">
           <a
             href="https://www.shecodes.io/graduates/62429-chloe-smits"
@@ -170,7 +170,7 @@
           >
         </div>
       </div>
-      <div class="row projects d-flex" id="lifelong">
+      <div class="row d-flex" id="lifelong">
         <div class="col ms-md-2 mt--md4">
           <h2><span class="primary-word d-md-none">LIFELONG</span></h2>
           <h2>
